# Lernmaterial

./: README.md  lernumgebung.html  pyproject.toml
src/worksheet_tool/: __init__.py  cli.py  editing.py  models.py  renderer.py
tests/: test_cli_flow.py  test_editing.py
